Add social media counter to support page

--- a/Assignment_4/html/about.html
+++ b/Assignment_4/html/about.html
@@ -4,199 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ETA Gaming</title>
+    <title>ETA Gaming | About</title>
     <link rel="stylesheet" href="../css/about.css">
-<<<<<<< HEAD
-    <link rel="icon" type="image/png" href="../images/home-page-icon.png">
-    <script src="https://unpkg.com/three@0.121.1/build/three.min.js"></script>
-    <script src="https://unpkg.com/globe.gl"></script>
-    <script src="../js/about.js" defer></script>
-</head>
-
-<body>
-    <div class="container">
-        <header id="masthead">
-            <a href="./home.html">
-                <img src="../images/home-page-icon.png" class="home-page-icon" alt="ETA Logo">
-            </a>
-            <p>ETA Gaming</p>
-            <nav>
-                <ul>
-                    <li><a href="#"><span>News</span></a></li>
-                    <li><a href="#"><span>Genres</span></a></li>
-                    <li><a href="#"><span>Events</span></a></li>
-                    <li><a href="./about.html"><span>About</span></a></li>
-                    <li><a href="./developers.html"><span>Developers</span></a></li>
-                    <li><a href="#"><span>Contact Us</span></a></li>
-                    <li><a href="#"><span>References</span></a></li>
-                </ul>
-            </nav>
-        </header>
-
-        <main>
-            <section id="about-content">
-                <header>
-                    <h1>
-                        About ETA Gaming
-                    </h1>
-                </header>
-            </section>
-
-            <section id="about-description">
-                <p>
-                    We are ETA Gaming — a digital hub created by gamers, for gamers.
-                    Our mission is to craft immersive, community-driven experiences that unite players across genres and
-                    platforms. Whether you're a casual explorer, competitive strategist, or retro pixel lover, ETA
-                    Gaming is your next destination.
-                </p>
-                <p>
-                    Founded in 2024 as a student-led initiative, ETA Gaming began with a bold vision: to connect people
-                    through play, creativity, and collaboration. From late-night game jams and UI experiments to a
-                    growing platform for gamers worldwide, we celebrate the diversity and passion that defines gaming
-                    culture.
-                </p>
-                <p>
-                    Our coverage spans everything from new game releases and developer spotlights to industry trends and
-                    live gaming events. With a team of dedicated gamers and storytellers, we deliver content that’s
-                    insightful, authentic, and built with players in mind.
-                </p>
-                <p>
-                    Whether you’re just starting your gaming journey or deep in the high-score chase, ETA Gaming has
-                    something for everyone.
-                </p>
-                <p>
-                    Let's explore the evolving world of gaming, together.
-                </p>
-            </section>
-
-            <div id="about-mission-vision">
-                <section id="about-mission">
-                    <h2>Our Mission</h2>
-                    <p>
-                        "At ETA Gaming, our mission is to create a vibrant community where gamers can connect, share, and
-                        explore the world of gaming together. We strive to provide a platform that celebrates the
-                        diversity
-                        of gaming experiences and fosters a sense of belonging among players."
-                    </p>
-                </section>
-
-                <section id="about-vision">
-                    <h2>Our Vision</h2>
-                    <p>
-                        "Our vision is to be a leading digital hub for gamers, where innovation meets community. We aim
-                        to
-                        inspire and empower gamers of all backgrounds to discover new adventures, forge friendships, and
-                        express their creativity through play."
-                    </p>
-                </section>
-            </div>
-
-            <div id="locations">
-                <section id="globe-section">
-                    <h2>Our Locations</h2>
-                    <div id="globe-container"></div>
-                </section>
-                <section id="offices">
-                    <div id="headquarters">
-                        <h2>Headquarters</h2>
-                        <p>
-                            Our headquarters is located in Griffith College, Cork, Ireland.
-                        </p>
-                        <p>
-                            <strong>Address:</strong> Griffith College Cork, Wellington Road, Cork City, Co. Cork, Ireland
-                        </p>
-                        <p>
-                            <strong>Contact:</strong> +353 (12) 345 6789
-                        </p>
-                    </div>
-                    <br>
-                    <div id="branch-offices">
-                        <h2>Branch Offices</h2>
-                        <ul>
-                            <li>
-                                <strong>Dublin Office:</strong> 123 Dublin Street, Dublin, Ireland
-                            </li>
-                            <li>
-                                <strong>Lagos Office:</strong> 456 Lagos Avenue, Lagos, Nigeria
-                            </li>
-                            <li>
-                                <strong>Tokyo Office:</strong> 789 Tokyo Road, Tokyo, Japan
-                            </li>
-                            <li>
-                                <strong>Los Angeles Office</strong> : 101 Hollywood Blvd, Los Angeles, USA
-                            </li>
-                            <li>
-                                <strong>Seoul Office:</strong> 234 Seoul Street, Seoul, South Korea
-                            </li>
-                            <li>
-                                <strong>São Paulo Office:</strong> 567 São Paulo Avenue, São Paulo, Brazil
-                            </li>
-                            <li>
-                                <strong>Sydney Office:</strong> 890 Sydney Road, Sydney, Australia
-                            </li>
-                            <li>
-                                <strong>McMurdo Station Office:</strong>  123 Antarctic Road, Antarctica
-                            </li>
-                        </ul>
-                    </div>
-                </section>
-            </div>
-        </main>
-
-        <footer id="footer">
-            <div class="eta-footer">
-                <br><br><br><br>
-                <p>&copy;2025 ETA Gaming, Inc. All rights Reserved</p>
-            </div>
-
-            <div>
-                <p>Emmanuel Ayobanjo</p>
-                <p>3173959</p>
-                <p>
-                    <a href="mailto:emmanuelayomikun.ayobanjo@student.griffith.ie">
-                        Email Me
-                        <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-envelope-arrow-up" viewBox="0 0 16 16">
-                            <path
-                                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v4.5a.5.5 0 0 1-1 0V5.383l-7 4.2-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h5.5a.5.5 0 0 1 0 1H2a2 2 0 0 1-2-1.99zm1 7.105 4.708-2.897L1 5.383zM1 4v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1" />
-                            <path
-                                d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.354-5.354 1.25 1.25a.5.5 0 0 1-.708.708L13 12.207V14a.5.5 0 0 1-1 0v-1.717l-.28.305a.5.5 0 0 1-.737-.676l1.149-1.25a.5.5 0 0 1 .722-.016" />
-                        </svg>
-                    </a>
-                </p>
-            </div>
-
-            <div>
-                <p>Thiago Barbosa</p>
-                <p>3185934</p>
-                <p>
-                    <a href="mailto:thiago.dasilvabarbosa@student.griffith.ie">
-                        Email Me
-                        <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-envelope-arrow-up" viewBox="0 0 16 16">
-                            <path
-                                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v4.5a.5.5 0 0 1-1 0V5.383l-7 4.2-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h5.5a.5.5 0 0 1 0 1H2a2 2 0 0 1-2-1.99zm1 7.105 4.708-2.897L1 5.383zM1 4v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1" />
-                            <path
-                                d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.354-5.354 1.25 1.25a.5.5 0 0 1-.708.708L13 12.207V14a.5.5 0 0 1-1 0v-1.717l-.28.305a.5.5 0 0 1-.737-.676l1.149-1.25a.5.5 0 0 1 .722-.016" />
-                        </svg>
-                    </a>
-                </p>
-            </div>
-
-            <div>
-                <p>Austine Biketi</p>
-                <p>3178096</p>
-                <p>
-                    <a href="mailto:austinebiketi.naulikha@student.griffith.ie">
-                        Email Me
-                        <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-envelope-arrow-up" viewBox="0 0 16 16">
-                            <path
-                                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v4.5a.5.5 0 0 1-1 0V5.383l-7 4.2-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h5.5a.5.5 0 0 1 0 1H2a2 2 0 0 1-2-1.99zm1 7.105 4.708-2.897L1 5.383zM1 4v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1" />
-                            <path
-                                d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.354-5.354 1.25 1.25a.5.5 0 0 1-.708.708L13 12.207V14a.5.5 0 0 1-1 0v-1.717l-.28.305a.5.5 0 0 1-.737-.676l1.149-1.25a.5.5 0 0 1 .722-.016" />
-                        </svg>
-                    </a>
-                </p>
-||||||| empty tree
-=======
     <script src="https://unpkg.com/three@0.121.1/build/three.min.js"></script>
     <script src="https://unpkg.com/globe.gl"></script>
     <script src="../js/about.js" defer></script>
@@ -216,13 +25,13 @@
                     <div class="bar"></div>
                 </div>
                 <ul class="nav-links" id="nav-links">
-                    <li><a href="./"><span>HOME</span></a></li>
+                    <li><a href="./home.html"><span>HOME</span></a></li>
                     <li><a href="./genres.html"><span>GENRES</span></a></li>
                     <li><a href="#"><span>EVENTS</span></a></li>
                     <li><a href="./about.html"><span>ABOUT</span></a></li>
                     <li><a href="./news.html"><span>NEWS</span></a></li>
                     <li><a href="./developers.html"><span>DEVELOPERS</span></a></li>
-                    <li><a href="#"><span>SUPPORT</span></a></li>
+                    <li><a href="./support.html"><span>SUPPORT</span></a></li>
                     <li><a href="#"><span>REFERENCES</span></a></li>
                 </ul>
             </nav>
@@ -364,7 +173,6 @@
             </div>
             <div class="footer-bottom-left">
                 <p>&copy; All Rights Reserved @ETAGAMING</p>
->>>>>>> 67f78233167e11e3577b761e9766b6efa9af0144
             </div>
         </footer>
     </div>
