--- a/Assignment_4/html/home.html
+++ b/Assignment_4/html/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ETA Gaming</title>
+    <title>ETA Gaming | Home</title>
     <link rel="stylesheet" href="../css/home.css">
 </head>
 
