Fix icons showcasing on support and genres

--- a/Assignment_4/html/support.html
+++ b/Assignment_4/html/support.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact Us</title>
+  <!-- <link rel="stylesheet" href="../css/main.css"> -->
   <link rel="stylesheet" href="../css/support.css">
   <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -75,34 +76,34 @@
       <button id="deleteBtn" class="btn danger">Delete</button>
     </div>
   </div>
-    <footer id="footer">
-        <div class="footer-logo">
-            <img src="../images/home-page-icon.png" alt="ETA GAMING Logo">
-        </div>
-        <div class="footer-names">
-            <p>AUSTINE</p>
-            <p>THIAGO</p>
-            <p>EMMANUEL</p>
-        </div>
-         <div class="footer-socials">
-            <a href="#"><img src="../icons/facebook-app-symbol.png" alt="Facebook"></a>
-            <a href="#"><img src="../icons/twitter-black-shape.png" alt="Twitter"></a>
-            <a href="#"><img src="../icons/youtube.png" alt="YouTube"></a>
-            <a href="#"><img src="../icons/twitch.png" alt="Twitch"></a>
-        </div>
-        <!-- <div class="footer-divider"></div> -->
-        <div class="footer-bottom-right">
-            <!-- <p>&copy; All Rights Reserved @ETAGAMING</p> -->
-            <div class="footer-links">
-                <a href="#">PRIVACY POLICY</a>
-                <a href="#">TERMS OF SERVICES</a>
-                <a href="#">CODE OF CONDUCT</a>
-            </div>
-        </div>
-        <div class="footer-bottom-left">
-            <p>&copy; All Rights Reserved @ETAGAMING</p>
-        </div>
-    </footer>
+  <footer id="footer">
+    <div class="footer-logo">
+      <img src="../images/home-page-icon.png" alt="ETA GAMING Logo">
+    </div>
+    <div class="footer-names">
+      <p>AUSTINE</p>
+      <p>THIAGO</p>
+      <p>EMMANUEL</p>
+    </div>
+    <div class="footer-socials">
+      <a href="#"><img src="../icons/facebook-app-symbol.png" alt="Facebook"></a>
+      <a href="#"><img src="../icons/twitter-black-shape.png" alt="Twitter"></a>
+      <a href="#"><img src="../icons/youtube.png" alt="YouTube"></a>
+      <a href="#"><img src="../icons/twitch.png" alt="Twitch"></a>
+    </div>
+      <!-- <div class="footer-divider"></div> -->
+      <div class="footer-bottom-right">
+          <!-- <p>&copy; All Rights Reserved @ETAGAMING</p> -->
+          <div class="footer-links">
+            <a href="#">PRIVACY POLICY</a>
+            <a href="#">TERMS OF SERVICES</a>
+            <a href="#">CODE OF CONDUCT</a>
+          </div>
+      </div>
+      <div class="footer-bottom-left">
+        <p>&copy; All Rights Reserved @ETAGAMING</p>
+      </div>
+  </footer>
   <script src="../js/support.js"></script>
 </body>
 </html>
