Add events files and fix links to other pages

--- a/Assignment_4/html/genres.html
+++ b/Assignment_4/html/genres.html
@@ -25,12 +25,12 @@
                 </div>
                 <ul class="nav-links" id="nav-links">
                     <li><a href="./home.html"><span>HOME</span></a></li>
-                    <li><a href="#"><span>GENRES</span></a></li>
-                    <li><a href="#"><span>EVENTS</span></a></li>
+                    <li><a href="./genres.html"><span>GENRES</span></a></li>
+                    <li><a href="./events.html"><span>EVENTS</span></a></li>
                     <li><a href="./about.html"><span>ABOUT</span></a></li>
                     <li><a href="./news.html"><span>NEWS</span></a></li>
                     <li><a href="./developers.html"><span>DEVELOPERS</span></a></li>
-                    <li><a href="#"><span>SUPPORT</span></a></li>
+                    <li><a href="./support.html"><span>SUPPORT</span></a></li>
                     <li><a href="#"><span>REFERENCES</span></a></li>
                 </ul>
             </nav>
