--- a/Assignment_4/html/support.html
+++ b/Assignment_4/html/support.html
@@ -23,9 +23,9 @@
         <div class="bar"></div>
       </div>
       <ul class="nav-links" id="nav-links">
-        <li><a href="./"><span>HOME</span></a></li>
+        <li><a href="./home.html"><span>HOME</span></a></li>
         <li><a href="./genres.html"><span>GENRES</span></a></li>
-        <li><a href="#"><span>EVENTS</span></a></li>
+        <li><a href="./events.html"><span>EVENTS</span></a></li>
         <li><a href="./about.html"><span>ABOUT</span></a></li>
         <li><a href="./news.html"><span>NEWS</span></a></li>
         <li><a href="./developers.html"><span>DEVELOPERS</span></a></li>
