--- a/Assignment_4/html/genres.html
+++ b/Assignment_4/html/genres.html
@@ -49,35 +49,6 @@
             </div>
         </section>
 
-
-        <section id="action-section" class="genre-section">
-            <div class="genre-text">
-                <h2>ACTION</h2>
-                <p>Explore adrenaline-pumping titles with fast-paced combat, breathtaking stunts, and explosive sequences.</p>
-            </div>
-            <div class="genre-gallery">
-                <div class="gallery-track">
-                <img src="../images/Batman.jpg" alt="">
-                <img src="../images/callofduty.jpg" alt="">
-                <img src="../images/forza.jpg" alt="">
-                </div>
-            </div>
-            </section>
-
-            <section id="racing-section" class="genre-section">
-            <div class="genre-text">
-                <h2>RACING</h2>
-                <p>Speed into high-octane challenges, realistic driving experiences, and competitive racing action.</p>
-            </div>
-            <div class="genre-gallery">
-                <div class="gallery-track">
-                <img src="https://images.unsplash.com/photo-1615038774821-524c8c35ed8b?auto=format&fit=crop&w=800" alt="">
-                <img src="https://images.unsplash.com/photo-1606669819929-070b2f9d4517?auto=format&fit=crop&w=800" alt="">
-                <img src="https://images.unsplash.com/photo-1503736334956-4c8f8e92946d?auto=format&fit=crop&w=800" alt="">
-                </div>
-            </div>
-            </section>
-
             <section id="adventure-section" class="genre-section">
             <div class="genre-text">
                 <h2>ADVENTURE</h2>
@@ -85,9 +56,13 @@
             </div>
             <div class="genre-gallery">
                 <div class="gallery-track">
-                <img src="https://cdn1.epicgames.com/offer/9b8d181f6e2b467caf5ebd6c355c4f3e/EGS_UNCHARTEDLegacyOfThievesCollection_NaughtyDog_S1_2560x1440-1b3e01c3aa754f86ecdbdf46bb2a2b0a" alt="">
-                <img src="https://images.unsplash.com/photo-1598550464304-8b02c3ae3b3a?auto=format&fit=crop&w=800" alt="">
-                <img src="https://images.unsplash.com/photo-1616264227937-774e94b09748?auto=format&fit=crop&w=800" alt="">
+                <img src="/images/gameCards/adventure/assassins.webp" alt="">
+                <img src="/images/gameCards/adventure/batman.webp" alt="">
+                <img src="/images/gameCards/adventure/godOfWar.webp" alt="">
+                <img src="/images/gameCards/adventure/redDead.webp" alt="">
+                <img src="/images/gameCards/adventure/tombRaider.webp" alt="">
+                <img src="/images/gameCards/adventure/uncharted.webp" alt="">
+                <img src="/images/gameCards/adventure/zelda.webp" alt="">
                 </div>
             </div>
             </section>
@@ -99,27 +74,88 @@
             </div>
             <div class="genre-gallery">
                 <div class="gallery-track">
-                <img src="https://images.unsplash.com/photo-1622452735143-f0677ebd85ad?auto=format&fit=crop&w=800" alt="">
-                <img src="https://images.unsplash.com/photo-1601758124122-5c8f4e5b2c11?auto=format&fit=crop&w=800" alt="">
-                <img src="https://images.unsplash.com/photo-1503602642458-232111445657?auto=format&fit=crop&w=800" alt="">
+                <img src="/images/gameCards/horror/amnesia.webp" alt="">
+                <img src="/images/gameCards/horror/deadSpace.webp" alt="">
+                <img src="/images/gameCards/horror/outlast.webp" alt="">
+                <img src="/images/gameCards/horror/phasmophobia.webp" alt="">
+                <img src="/images/gameCards/horror/residentEvil.webp" alt="">
+                <img src="/images/gameCards/horror/silentHill.webp" alt="">
+                <img src="/images/gameCards/horror/theEvilWithin.webp" alt="">
                 </div>
             </div>
             </section>
 
-            <section id="sci-fi-section" class="genre-section">
+            <section id="racing-section" class="genre-section">
             <div class="genre-text">
-                <h2>SCI-FI</h2>
-                <p>Step into futuristic universes, alien worlds, and interstellar adventures filled with high-tech marvels.</p>
+                <h2>SPORTS</h2>
+                <p>A sports video game is a video game that simulates the practice of sports.</p>
             </div>
             <div class="genre-gallery">
                 <div class="gallery-track">
-                <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1938090/capsule_616x353.jpg" alt="">
-                <img src="https://images.unsplash.com/photo-1638376315983-d29de4f01b9f?auto=format&fit=crop&w=800" alt="">
-                <img src="https://images.unsplash.com/photo-1631190702213-4fc4cb832377?auto=format&fit=crop&w=800" alt="">
+                <img src="/images/gameCards/sports/fifa.webp" alt="">
+                <img src="/images/gameCards/sports/mlb.webp" alt="">
+                <img src="/images/gameCards/sports/nba.webp" alt="">
+                <img src="/images/gameCards/sports/nfl.webp" alt="">
+                <img src="/images/gameCards/sports/pes.webp" alt="">
+                <img src="/images/gameCards/sports/rocketLeague.webp" alt="">
+                <img src="/images/gameCards/sports/skate.webp" alt="">
                 </div>
             </div>
             </section>
 
+            <section id="strategy-section" class="genre-section">
+            <div class="genre-text">
+                <h2>STRATEGY</h2>
+                <p>A player must plan a series of actions against one or more opponents, and the reduction of enemy forces is usually a goal. Victory is achieved through superior planning, and the element of chance takes a smaller role.</p>
+            </div>
+            <div class="genre-gallery">
+                <div class="gallery-track">
+                <img src="/images/gameCards/strategy/lol.webp" alt="">
+                <img src="/images/gameCards/strategy/warhammer.webp" alt="">
+                <img src="/images/gameCards/strategy/civilization.webp" alt="">
+                <img src="/images/gameCards/strategy/ageOfEmpires.webp" alt="">
+                <img src="/images/gameCards/strategy/crusaderKings.webp" alt="">
+                <img src="/images/gameCards/strategy/xcom.webp" alt="">
+                <img src="/images/gameCards/strategy/starCraft.webp" alt="">
+                </div>
+            </div>
+            </section>
+
+            <section id="rpg-section" class="genre-section">
+            <div class="genre-text">
+                <h2>RPG</h2>
+                <p>A role-playing game (sometimes spelled roleplaying game, or abbreviated as RPG) is a game in which players assume the roles of characters in a fictional setting.</p>
+            </div>
+            <div class="genre-gallery">
+                <div class="gallery-track">
+                <img src="/images/gameCards/rpg/baldursGate.webp" alt="">
+                <img src="/images/gameCards/rpg/elden.webp" alt="">
+                <img src="/images/gameCards/rpg/witcher.webp" alt="">
+                <img src="/images/gameCards/rpg/dragonAge.webp" alt="">
+                <img src="/images/gameCards/rpg/fantasy.webp" alt="">
+                <img src="/images/gameCards/rpg/skyrim.webp" alt="">
+                <img src="/images/gameCards/rpg/wow.webp" alt="">
+                </div>
+            </div>
+            </section>
+
+            <section id="simulation-section" class="genre-section">
+            <div class="genre-text">
+                <h2>SIMULATION</h2>
+                <p>A simulation game attempts to copy various activities from real life in the form of a game for various purposes such as training, analysis, prediction, or entertainment.</p>
+            </div>
+            <div class="genre-gallery">
+                <div class="gallery-track">
+                <img src="/images/gameCards/simulation/minecraft.webp" alt="">
+                <img src="/images/gameCards/simulation/sims.jpg" alt="">
+                <img src="/images/gameCards/simulation/skyline.jpg" alt="">
+                <img src="/images/gameCards/simulation/farming.webp" alt="">
+                <img src="/images/gameCards/simulation/flight.webp" alt="">
+                <img src="/images/gameCards/simulation/kerbal.webp" alt="">
+                <img src="/images/gameCards/simulation/truck.webp" alt="">
+                </div>
+            </div>
+            </section>
 
 
         <footer id="footer">
@@ -151,6 +187,5 @@
             </div>
         </footer>
     </div>
-    
 </body>
 </html>
