Fix image links

--- a/Assignment_4/html/genres.html
+++ b/Assignment_4/html/genres.html
@@ -56,13 +56,13 @@
             </div>
             <div class="genre-gallery">
                 <div class="gallery-track">
-                <img src="/images/gameCards/adventure/assassins.webp" alt="">
-                <img src="/images/gameCards/adventure/batman.webp" alt="">
-                <img src="/images/gameCards/adventure/godOfWar.webp" alt="">
-                <img src="/images/gameCards/adventure/redDead.webp" alt="">
-                <img src="/images/gameCards/adventure/tombRaider.webp" alt="">
-                <img src="/images/gameCards/adventure/uncharted.webp" alt="">
-                <img src="/images/gameCards/adventure/zelda.webp" alt="">
+                <img src="../images/gameCards/adventure/assassins.webp" alt="">
+                <img src="../images/gameCards/adventure/batman.webp" alt="">
+                <img src="../images/gameCards/adventure/godOfWar.webp" alt="">
+                <img src="../images/gameCards/adventure/redDead.webp" alt="">
+                <img src="../images/gameCards/adventure/tombRaider.webp" alt="">
+                <img src="../images/gameCards/adventure/uncharted.webp" alt="">
+                <img src="../images/gameCards/adventure/zelda.webp" alt="">
                 </div>
             </div>
             </section>
@@ -74,13 +74,13 @@
             </div>
             <div class="genre-gallery">
                 <div class="gallery-track">
-                <img src="/images/gameCards/horror/amnesia.webp" alt="">
-                <img src="/images/gameCards/horror/deadSpace.webp" alt="">
-                <img src="/images/gameCards/horror/outlast.webp" alt="">
-                <img src="/images/gameCards/horror/phasmophobia.webp" alt="">
-                <img src="/images/gameCards/horror/residentEvil.webp" alt="">
-                <img src="/images/gameCards/horror/silentHill.webp" alt="">
-                <img src="/images/gameCards/horror/theEvilWithin.webp" alt="">
+                <img src="../images/gameCards/horror/amnesia.webp" alt="">
+                <img src="../images/gameCards/horror/deadSpace.webp" alt="">
+                <img src="../images/gameCards/horror/outlast.webp" alt="">
+                <img src="../images/gameCards/horror/phasmophobia.webp" alt="">
+                <img src="../images/gameCards/horror/residentEvil.webp" alt="">
+                <img src="../images/gameCards/horror/silentHill.webp" alt="">
+                <img src="../images/gameCards/horror/theEvilWithin.webp" alt="">
                 </div>
             </div>
             </section>
@@ -92,13 +92,13 @@
             </div>
             <div class="genre-gallery">
                 <div class="gallery-track">
-                <img src="/images/gameCards/sports/fifa.webp" alt="">
-                <img src="/images/gameCards/sports/mlb.webp" alt="">
-                <img src="/images/gameCards/sports/nba.webp" alt="">
-                <img src="/images/gameCards/sports/nfl.webp" alt="">
-                <img src="/images/gameCards/sports/pes.webp" alt="">
-                <img src="/images/gameCards/sports/rocketLeague.webp" alt="">
-                <img src="/images/gameCards/sports/skate.webp" alt="">
+                <img src="../images/gameCards/sports/fifa.webp" alt="">
+                <img src="../images/gameCards/sports/mlb.webp" alt="">
+                <img src="../images/gameCards/sports/nba.webp" alt="">
+                <img src="../images/gameCards/sports/nfl.webp" alt="">
+                <img src="../images/gameCards/sports/pes.webp" alt="">
+                <img src="../images/gameCards/sports/rocketLeague.webp" alt="">
+                <img src="../images/gameCards/sports/skate.webp" alt="">
                 </div>
             </div>
             </section>
@@ -110,13 +110,13 @@
             </div>
             <div class="genre-gallery">
                 <div class="gallery-track">
-                <img src="/images/gameCards/strategy/lol.webp" alt="">
-                <img src="/images/gameCards/strategy/warhammer.webp" alt="">
-                <img src="/images/gameCards/strategy/civilization.webp" alt="">
-                <img src="/images/gameCards/strategy/ageOfEmpires.webp" alt="">
-                <img src="/images/gameCards/strategy/crusaderKings.webp" alt="">
-                <img src="/images/gameCards/strategy/xcom.webp" alt="">
-                <img src="/images/gameCards/strategy/starCraft.webp" alt="">
+                <img src="../images/gameCards/strategy/lol.webp" alt="">
+                <img src="../images/gameCards/strategy/warhammer.webp" alt="">
+                <img src="../images/gameCards/strategy/civilization.webp" alt="">
+                <img src="../images/gameCards/strategy/ageOfEmpires.webp" alt="">
+                <img src="../images/gameCards/strategy/crusaderKings.webp" alt="">
+                <img src="../images/gameCards/strategy/xcom.webp" alt="">
+                <img src="../images/gameCards/strategy/starCraft.webp" alt="">
                 </div>
             </div>
             </section>
@@ -128,13 +128,13 @@
             </div>
             <div class="genre-gallery">
                 <div class="gallery-track">
-                <img src="/images/gameCards/rpg/baldursGate.webp" alt="">
-                <img src="/images/gameCards/rpg/elden.webp" alt="">
-                <img src="/images/gameCards/rpg/witcher.webp" alt="">
-                <img src="/images/gameCards/rpg/dragonAge.webp" alt="">
-                <img src="/images/gameCards/rpg/fantasy.webp" alt="">
-                <img src="/images/gameCards/rpg/skyrim.webp" alt="">
-                <img src="/images/gameCards/rpg/wow.webp" alt="">
+                <img src="../images/gameCards/rpg/baldursGate.webp" alt="">
+                <img src="../images/gameCards/rpg/elden.webp" alt="">
+                <img src="../images/gameCards/rpg/witcher.webp" alt="">
+                <img src="../images/gameCards/rpg/dragonAge.webp" alt="">
+                <img src="../images/gameCards/rpg/fantasy.webp" alt="">
+                <img src="../images/gameCards/rpg/skyrim.webp" alt="">
+                <img src="../images/gameCards/rpg/wow.webp" alt="">
                 </div>
             </div>
             </section>
@@ -146,13 +146,13 @@
             </div>
             <div class="genre-gallery">
                 <div class="gallery-track">
-                <img src="/images/gameCards/simulation/minecraft.webp" alt="">
-                <img src="/images/gameCards/simulation/sims.jpg" alt="">
-                <img src="/images/gameCards/simulation/skyline.jpg" alt="">
-                <img src="/images/gameCards/simulation/farming.webp" alt="">
-                <img src="/images/gameCards/simulation/flight.webp" alt="">
-                <img src="/images/gameCards/simulation/kerbal.webp" alt="">
-                <img src="/images/gameCards/simulation/truck.webp" alt="">
+                <img src="../images/gameCards/simulation/minecraft.webp" alt="">
+                <img src="../images/gameCards/simulation/sims.jpg" alt="">
+                <img src="../images/gameCards/simulation/skyline.jpg" alt="">
+                <img src="../images/gameCards/simulation/farming.webp" alt="">
+                <img src="../images/gameCards/simulation/flight.webp" alt="">
+                <img src="../images/gameCards/simulation/kerbal.webp" alt="">
+                <img src="../images/gameCards/simulation/truck.webp" alt="">
                 </div>
             </div>
             </section>
