--- a/Assignment_4/html/developers.html
+++ b/Assignment_4/html/developers.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
     <!-- <link rel="stylesheet" href="../css/main.css"> -->
-    <link rel="stylesheet" href="../css/main.css">
-    <script src="../js/support.js" defer></script>
+    <link rel="stylesheet" href="../css/developers.css">
+    <script src="../js/scriptdeveloper.js" defer></script>
 </head>
 
 <body>
@@ -35,21 +35,34 @@
         </nav>
     </header>
 
+    <div class="cards-wrapper">
+    <div class="card-container">
+        <div class="card" id="austine-card">
+            <h2>Austine</h2>
+            <img src="/images/developers/austine/WhatsApp Image 2025-07-14 at 14.49.07.jpeg">
+            <p>A man born in the land of Eldamar. He is a dreamer and a beloved from the depths of the heart. His coming was in a bright moment, like stars shining. He is a brave and faithful man, who leaves the good to seek love in all darkness.</p>
+            <button onclick="changeCardContent('austine')">Button</button>
+        </div>
+    </div>
 
+    <div class="card-container">
+        <div class="card" id="emmanuel-card">
+            <h2>Emmanuel</h2>
+            <img src="/images/developers/emmanuel/WhatsApp Image 2025-07-14 at 15.00.22.jpeg">
+            <p>Emmanuel is a young man from Nigeria, known for his warm spirit and strong determination. Growing up surrounded by vibrant culture and rich traditions, he carries with him a deep sense of pride and resilience. Passionate about learning and connecting with others, Emmanuel strives to make a positive impact wherever he goes.</p>
+            <button onclick="changeCardContent('emmanuel')">Button</button>
+        </div>
+    </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <div class="card-container">
+        <div class="card" id="thiago-card">
+            <h2>Thiago</h2>
+            <img src="/images/developers/thiago/WhatsApp Image 2025-07-12 at 22.12.31.jpeg">
+            <p>Thiago is a vibrant young man from Brazil, full of energy and creativity. Growing up amidst Brazil’s lively culture and beautiful landscapes, he developed a deep appreciation for music, football, and community. With a warm heart and a curious mind, Thiago embraces life with enthusiasm and a passion for new experiences.</p>
+            <button onclick="changeCardContent('thiago')">Button</button>
+        </div>
+    </div>
+</div>
     
     <div class="container">
         <footer id="footer">
