Modify Events page

--- a/Assignment_4/html/news.html
+++ b/Assignment_4/html/news.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/news.css">
 
-    <title>NEWS</title>
+    <title>ETA Gaming | News</title>
 
 </head>
 <body>
