--- a/Assignment_4/html/support.html
+++ b/Assignment_4/html/support.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Us</title>
+  <title>ETA Gaming | Support</title>
   <!-- <link rel="stylesheet" href="../css/main.css"> -->
   <link rel="stylesheet" href="../css/support.css">
   <link rel="stylesheet" href="../css/main.css">
