--- a/Assignment_4/html/support.html
+++ b/Assignment_4/html/support.html
@@ -41,7 +41,7 @@
         <!-- Instagram logo SVG -->
         <svg class="socials" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
           <path
-            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951" />
         </svg>
         <!-- Animated counter for Instagram followers -->
         <span class="counter" data-target="151000">
@@ -54,7 +54,7 @@
         <!-- Twitter logo SVG -->
         <svg class="socials" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
           <path
-            d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334q.002-.211-.006-.422A6.7 6.7 0 0 0 16 3.542a6.7 6.7 0 0 1-1.889.518 3.3 3.3 0 0 0 1.447-1.817 6.5 6.5 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.32 9.32 0 0 1-6.767-3.429 3.29 3.29 0 0 0 1.018 4.382A3.3 3.3 0 0 1 .64 6.575v.045a3.29 3.29 0 0 0 2.632 3.218 3.2 3.2 0 0 1-.865.115 3 3 0 0 1-.614-.057 3.28 3.28 0 0 0 3.067 2.277A6.6 6.6 0 0 1 .78 13.58a6 6 0 0 1-.78-.045A9.34 9.34 0 0 0 5.026 15"/>
+            d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334q.002-.211-.006-.422A6.7 6.7 0 0 0 16 3.542a6.7 6.7 0 0 1-1.889.518 3.3 3.3 0 0 0 1.447-1.817 6.5 6.5 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.32 9.32 0 0 1-6.767-3.429 3.29 3.29 0 0 0 1.018 4.382A3.3 3.3 0 0 1 .64 6.575v.045a3.29 3.29 0 0 0 2.632 3.218 3.2 3.2 0 0 1-.865.115 3 3 0 0 1-.614-.057 3.28 3.28 0 0 0 3.067 2.277A6.6 6.6 0 0 1 .78 13.58a6 6 0 0 1-.78-.045A9.34 9.34 0 0 0 5.026 15" />
         </svg>
         <!-- Animated counter for Twitter followers (target value in data attribute) -->
         <span class="counter" data-target="122300">
@@ -79,8 +79,9 @@
       <div class="linkedin-page">
         <!-- LinkedIn logo SVG -->
         <svg class="socials" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-            <path d="M3.857 0 1 2.857v10.286h3.429V16l2.857-2.857H9.57L14.714 8V0zm9.714 7.429-2.285 2.285H9l-2 2v-2H4.429V1.143h9.142z"/>
-            <path d="M11.857 3.143h-1.143V6.57h1.143zm-3.143 0H7.571V6.57h1.143z"/>
+          <path
+            d="M3.857 0 1 2.857v10.286h3.429V16l2.857-2.857H9.57L14.714 8V0zm9.714 7.429-2.285 2.285H9l-2 2v-2H4.429V1.143h9.142z" />
+          <path d="M11.857 3.143h-1.143V6.57h1.143zm-3.143 0H7.571V6.57h1.143z" />
         </svg>
         <!-- Animated counter for LinkedIn connections/followers -->
         <span class="counter" data-target="454507">
@@ -88,7 +89,7 @@
         </span>
       </div>
     </div>
-    
+
     <h2>Contact Us</h2>
 
     <form id="contactForm">
@@ -132,9 +133,12 @@
       <button id="deleteBtn" class="btn danger">Delete</button>
     </div>
   </div>
-  <footer id="footer">
+  <footer id=" footer">
     <div class="footer-logo">
       <img src="../images/home-page-icon.png" alt="ETA GAMING Logo">
+    </div>
+    <div class="footer-bottom-left">
+      <p>&copy; All Rights Reserved @ETAGAMING</p>
     </div>
     <div class="footer-names">
       <p>AUSTINE</p>
@@ -155,9 +159,6 @@
         <a href="#">TERMS OF SERVICES</a>
         <a href="#">CODE OF CONDUCT</a>
       </div>
-    </div>
-    <div class="footer-bottom-left">
-      <p>&copy; All Rights Reserved @ETAGAMING</p>
     </div>
   </footer>
   <script src="../js/support.js"></script>
