Modify events page

--- a/Assignment_4/html/events.html
+++ b/Assignment_4/html/events.html
@@ -171,7 +171,7 @@
                 </div>
 
                 <div class="event-card">
-                    <img src="../images/forza.jpg" alt="League of Legends Event">
+                    <img src="../images/forza-background.jpg" alt="League of Legends Event">
                     <section class="event-details">
                         <h1>Forza Horizon 4</h1>
                         <p class="event-date">
@@ -374,7 +374,7 @@
 
                 <section id="learn-more-forza" class="popup">
                     <button class="close-forza">X</button>
-                    <img src="../images/forza.jpg" alt="Forza Event">
+                    <img src="../images/forza-background.jpg" alt="Forza Event">
                     <h2>Forza Horizon 4</h2>
                     <p class="event-date">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
