--- a/Assignment_4/html/developers.html
+++ b/Assignment_4/html/developers.html
@@ -42,7 +42,7 @@
                 <p>A man born in the land of Eldamar. He is a dreamer and a beloved from the depths of the heart. His
                     coming was in a bright moment, like stars shining. He is a brave and faithful man, who leaves the
                     good to seek love in all darkness.</p>
-                <button onclick="changeCardContent('austine')">Button</button>
+                <button onclick="changeCardContent('austine')">CardGame</button>
             </div>
         </div>
 
@@ -54,7 +54,7 @@
                     surrounded by vibrant culture and rich traditions, he carries with him a deep sense of pride and
                     resilience. Passionate about learning and connecting with others, Emmanuel strives to make a
                     positive impact wherever he goes.</p>
-                <button onclick="changeCardContent('emmanuel')">Button</button>
+                <button onclick="changeCardContent('emmanuel')">CardGame</button>
             </div>
         </div>
 
@@ -66,7 +66,7 @@
                     lively culture and beautiful landscapes, he developed a deep appreciation for music, football, and
                     community. With a warm heart and a curious mind, Thiago embraces life with enthusiasm and a passion
                     for new experiences.</p>
-                <button onclick="changeCardContent('thiago')">Button</button>
+                <button onclick="changeCardContent('thiago')">CardGame</button>
             </div>
         </div>
     </div>
