--- a/Assignment_4/html/support.html
+++ b/Assignment_4/html/support.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ETA Gaming | Support</title>
   <!-- <link rel="stylesheet" href="../css/main.css"> -->
-  <link rel="stylesheet" href="../css/support.css">
   <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/support.css">
 </head>
 
 <body>
@@ -34,6 +34,7 @@
       </ul>
     </nav>
   </header>
+
   <div class="container">
     <div id="counter-container">
       <!-- Facebook block -->
@@ -132,7 +133,10 @@
       <button id="editBtn" class="btn secondary">Edit</button>
       <button id="deleteBtn" class="btn danger">Delete</button>
     </div>
+
+    <div id="message-container"></div>
   </div>
+
   <footer id=" footer">
     <div class="footer-logo">
       <img src="../images/home-page-icon.png" alt="ETA GAMING Logo">
