--- a/Assignment_4/html/home.html
+++ b/Assignment_4/html/home.html
@@ -59,9 +59,9 @@
                 <p>&copy; All Rights Reserved @ETAGAMING</p>
             </div>
             <div class="footer-names">
-                <p>AUSTINE</p>
-                <p>THIAGO</p>
-                <p>EMMANUEL</p>
+                <p class="name" data-number="3178096">AUSTINE</p>
+                <p class="name" data-number="3178097">THIAGO</p>
+                <p class="name" data-number="3178098">EMMANUEL</p>
             </div>
             <div class="footer-socials">
                 <a href="#"><img src="../icons/facebook-app-symbol.png" alt="Facebook"></a>
