Add uniformity to pages

--- a/Assignment_4/html/developers.html
+++ b/Assignment_4/html/developers.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ETA Gaming | developers</title>
-    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/developers.css">
+    <link rel="stylesheet" href="../css/main.css">
     <script src="../js/developer.js" defer></script>
 </head>
 
@@ -79,9 +79,9 @@
             <p>&copy; All Rights Reserved @ETAGAMING</p>
         </div>
         <div class="footer-names">
-            <p>AUSTINE</p>
-            <p>THIAGO</p>
-            <p>EMMANUEL</p>
+            <p class="name" data-number="3178096">AUSTINE</p>
+            <p class="name" data-number="3178097">THIAGO</p>
+            <p class="name" data-number="3178098">EMMANUEL</p>
         </div>
         <div class="footer-socials">
             <a href="#"><img src="../icons/facebook-app-symbol.png" alt="Facebook"></a>
