--- a/Assignment_4/html/genres.html
+++ b/Assignment_4/html/genres.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ETA Gaming | Genres</title>
 
-    <link rel="stylesheet" href="../css/main.css">
+    
     <link rel="stylesheet" href="../css/genres.css">
+    <link rel="stylesheet" href="../css/main.css">
     <script src="../js/genres.js" defer></script>
 </head>
 <body>
@@ -158,7 +159,7 @@
             </section>
 
 
-        <footer id=" footer">
+        <footer id="footer">
             <div class="footer-logo">
                 <img src="../images/home-page-icon.png" alt="ETA GAMING Logo">
             </div>
@@ -166,9 +167,9 @@
                 <p>&copy; All Rights Reserved @ETAGAMING</p>
             </div>
             <div class="footer-names">
-                <p>AUSTINE</p>
-                <p>THIAGO</p>
-                <p>EMMANUEL</p>
+                <p class="name" data-number="3178096">AUSTINE</p>
+                <p class="name" data-number="3178097">THIAGO</p>
+                <p class="name" data-number="3178098">EMMANUEL</p>
             </div>
             <div class="footer-socials">
                 <a href="#"><img src="../icons/facebook-app-symbol.png" alt="Facebook"></a>
