--- a/Assignment_4/html/news.html
+++ b/Assignment_4/html/news.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/news.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <title>ETA Gaming | News</title>
 
@@ -175,7 +175,7 @@
 
     <!-- footer section -->
     <section>
-        <footer id=" footer">
+        <footer id="footer">
             <div class="footer-logo">
                 <img src="../images/home-page-icon.png" alt="ETA GAMING Logo">
             </div>
@@ -183,9 +183,9 @@
                 <p>&copy; All Rights Reserved @ETAGAMING</p>
             </div>
             <div class="footer-names">
-                <p>AUSTINE</p>
-                <p>THIAGO</p>
-                <p>EMMANUEL</p>
+                <p class="name" data-number="3178096">AUSTINE</p>
+                <p class="name" data-number="3178097">THIAGO</p>
+                <p class="name" data-number="3178098">EMMANUEL</p>
             </div>
             <div class="footer-socials">
                 <a href="#"><img src="../icons/facebook-app-symbol.png" alt="Facebook"></a>
