--- a/Assignment_4/html/support.html
+++ b/Assignment_4/html/support.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ETA Gaming | Support</title>
   <!-- <link rel="stylesheet" href="../css/main.css"> -->
-  <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="../css/support.css">
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
@@ -137,7 +137,7 @@
     <div id="message-container"></div>
   </div>
 
-  <footer id=" footer">
+  <footer id="footer">
     <div class="footer-logo">
       <img src="../images/home-page-icon.png" alt="ETA GAMING Logo">
     </div>
@@ -145,9 +145,9 @@
       <p>&copy; All Rights Reserved @ETAGAMING</p>
     </div>
     <div class="footer-names">
-      <p>AUSTINE</p>
-      <p>THIAGO</p>
-      <p>EMMANUEL</p>
+      <p class="name" data-number="3178096">AUSTINE</p>
+      <p class="name" data-number="3178097">THIAGO</p>
+      <p class="name" data-number="3178098">EMMANUEL</p>
     </div>
     <div class="footer-socials">
       <a href="#"><img src="../icons/facebook-app-symbol.png" alt="Facebook"></a>
