--- a/Assignment_4/html/about.html
+++ b/Assignment_4/html/about.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ETA Gaming | About</title>
+    <title>ETA Gaming | About</title>   
     <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../css/main.css">
     <script src="https://unpkg.com/three@0.121.1/build/three.min.js"></script>
     <script src="https://unpkg.com/globe.gl"></script>
     <script src="../js/about.js" defer></script>
@@ -147,7 +148,7 @@
             </div>
         </main>
 
-        <footer id=" footer">
+        <footer id="footer">
             <div class="footer-logo">
                 <img src="../images/home-page-icon.png" alt="ETA GAMING Logo">
             </div>
@@ -155,9 +156,9 @@
                 <p>&copy; All Rights Reserved @ETAGAMING</p>
             </div>
             <div class="footer-names">
-                <p>AUSTINE</p>
-                <p>THIAGO</p>
-                <p>EMMANUEL</p>
+                <p class="name" data-number="3178096">AUSTINE</p>
+                <p class="name" data-number="3178097">THIAGO</p>
+                <p class="name" data-number="3178098">EMMANUEL</p>
             </div>
             <div class="footer-socials">
                 <a href="#"><img src="../icons/facebook-app-symbol.png" alt="Facebook"></a>
