--- a/Assignment_4/html/events.html
+++ b/Assignment_4/html/events.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ETA Gaming | Events</title>
     <link rel="stylesheet" href="../css/events.css">
+    <link rel="stylesheet" href="../css/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/qrcode-generator@1.4.4/qrcode.min.js"></script>
     <script src="../js/events.js" defer></script>
@@ -466,9 +467,9 @@
                 <p>&copy; All Rights Reserved @ETAGAMING</p>
             </div>
             <div class="footer-names">
-                <p>AUSTINE</p>
-                <p>THIAGO</p>
-                <p>EMMANUEL</p>
+                <p class="name" data-number="3178096">AUSTINE</p>
+                <p class="name" data-number="3178097">THIAGO</p>
+                <p class="name" data-number="3178098">EMMANUEL</p>
             </div>
             <div class="footer-socials">
                 <a href="#"><img src="../icons/facebook-app-symbol.png" alt="Facebook"></a>
