Update support page by adding a final submission page

--- a/Assignment_4/html/support.html
+++ b/Assignment_4/html/support.html
@@ -130,6 +130,7 @@
     <div id="previewContainer" class="hidden">
       <h3>Review Your Details</h3>
       <div id="previewContent"></div>
+      <button id="submitFinalBtn" class="btn success">Submit Final</button>
       <button id="editBtn" class="btn secondary">Edit</button>
       <button id="deleteBtn" class="btn danger">Delete</button>
     </div>
